fixing horizontal scrolling

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,20 +11,26 @@
 }
 
 * {
-    box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: 'nidus_sansregular';
+    overflow: auto;
 }
+
+*, *:before, *:after {
+    box-sizing: inherit;
+  }
 
 /* body {
     background: linear-gradient(0deg, #0c0931, #1d1856, #e80074,#c200db , #00cfe5 90%);
 } */
 
 html{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
+    box-sizing: border-box;
 }
+
 
 .caption {
     position: absolute;
@@ -62,6 +68,7 @@ html{
 .bkimage1 {
     min-height: 1400px;
 }
+
 .bkimage2 {
     min-height: 400px;
 }
@@ -72,6 +79,7 @@ html{
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: cover;
+    width: 100%;
     top: 40%;
 }
 
@@ -81,16 +89,15 @@ html{
     opacity: 1;
     color: white;
     top: 2.2em;
-    left: 0.3em;
     font-size: 90px;
 }
+
 .second-genre .genre-name {
     text-align: right;
     position: relative;
     opacity: 1;
     color: white;
     top: 2.2em;
-    left: 0.3em;
     font-size: 90px;
 }
 .third-genre .genre-name {
@@ -99,19 +106,18 @@ html{
     opacity: 1;
     color: white;
     top: 2.2em;
-    left: 0.3em;
     font-size: 90px;
 }
+
 
 .triangle-up {
     width: 0;
     height: 0;
     opacity: 0.6;
-    border-left: 70px solid transparent;
-    border-right: 70px solid transparent;
-    border-bottom: 120px solid #c200db;
+    border-left: 90px solid transparent;
+    border-right: 90px solid transparent;
+    border-bottom: 140px solid #c200db;
     left: 25em;
-    top: 11em;
     text-align: left;
     position: relative;
   }
@@ -120,9 +126,9 @@ html{
     width: 0;
     height: 0;
     opacity: 0.6;
-    border-left: 70px solid transparent;
-    border-right: 70px solid transparent;
-    border-top: 120px solid #c200db; 
+    border-left: 90px solid transparent;
+    border-right: 90px solid transparent;
+    border-top: 140px solid #c200db; 
     left: 20em;
     text-align: left;
     position: relative;
